# wheel-dedup

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/wheel_dedup/: checker.py  cli.py  conflict.py  installer.py  parser.py
tests/: test_checker.py  test_conflict.py  test_installer.py  test_integration.py  test_parser.py
