[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wheel-dedup"
version = "0.1.0"
description = "Skip already-installed wheels when batch installing"
requires-python = ">=3.8"

[project.scripts]
wheel-dedup = "wheel_dedup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wheel_dedup"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
