[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wheel-dedup"
version = "0.1.0"
description = "Skip already-installed wheels when batch installing"
requires-python = ">=3.8"
dependencies = ["packaging>=21.0"]
license = "MIT"
authors = [
    { name = "chales" },
]
keywords = ["wheel", "pip", "dedup", "install"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/chales/wheel-dedup"

[project.scripts]
wheel-dedup = "wheel_dedup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wheel_dedup"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
